--- a/eventstyle.css
+++ b/eventstyle.css
@@ -7,7 +7,7 @@
 body {
     font-family: Poppins, sans-serif;
     background-color: #f2f2f2;
-    background-image: url("images/white1.jpg");
+    background-image: url("images/blue.jpg");
     background-size: cover;
 }
 
